# datacite-data-file-dl

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
src/datacite_data_file_dl/: __init__.py  __main__.py  auth.py  checksum.py  cli.py  config.py  download.py  exit_codes.py  interactive.py  log.py  output.py  progress.py  retry.py  safe_path.py
tests/: __init__.py  conftest.py  test_auth.py  test_checksum.py  test_cli.py  test_cli_integration.py  test_config.py  test_download.py  test_exit_codes.py  test_integration.py  test_log.py  test_output.py  test_progress.py  test_retry.py  test_security.py
